1.加入房间逻辑修改